# qt_with_ffmpeg_api_lecture

./: .gitignore
04_mac_hello_ffmpeg/: 04_mac_hello_ffmpeg.pro
08_record_audio/: 08_record_audio.pro  mainwindow.cpp
09_record_audio_sub_thread/: audiothread.cpp
10_sdl_play_pcm_pause/: 10_sdl_play_pcm_pause.pro  playthread.cpp
11_sdl_play_pcm/: playthread.cpp
SDL2/PlaySDL/: CMakeLists.txt
